--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,21 @@
 language: php
 
+sudo: false
+
+cache:
+  directory:
+      - $HOME/.composer/cache
+
 php:
-  - 5.5
   - 5.6
   - 7.0
 
 install:
   - composer self-update
-  - composer install --prefer-dist --optimize-autoloader --classmap-authoritative
+  - composer install --prefer-dist
 
 script:
-  - phpunit --coverage-text
+  - php --no-php-ini ./vendor/bin/phpunit
 
 notifications:
   email: false
