--- a/.travis.yml
+++ b/.travis.yml
@@ -7,19 +7,19 @@ matrix:
   include:
     - php: 7.0
     - php: 7.1
+      env: CODE_COVERAGE=1
     - php: 7.2
+      env: COMPOSER_FLAGS="--ignore-platform-reqs"
     - php: nightly
+      env: COMPOSER_FLAGS="--ignore-platform-reqs"
 
 cache:
   directories:
     - $HOME/.composer
 
-install:
-  - phpenv config-rm xdebug.ini || return 0
-  - composer install --prefer-dist
+install: wget -qO - https://github.com/Slamdunk/travis-scripts/raw/master/php-install.sh | sh
 
-script:
-  - php --no-php-ini ./vendor/bin/phpunit
+script: wget -qO - https://github.com/Slamdunk/travis-scripts/raw/master/php-script.sh | sh
 
 notifications:
   email: false
