--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,11 @@
         "files": ["lib/r.php"]
     },
     "require": {
-        "php": "^7.0"
+        "php": "^7.1"
     },
     "require-dev": {
-        "doctrine/common": "^2.7",
-        "phpunit/phpunit": "^6.3"
+        "doctrine/common": "^2.8",
+        "phpunit/phpunit": "^6.5",
+        "roave/security-advisories": "dev-master"
     }
 }
