--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "require-dev": {
         "doctrine/common": "^2.9",
         "phpunit/phpunit": "^7.2",
-        "roave/security-advisories": "dev-master"
+        "roave/security-advisories": "dev-master",
+        "slam/php-cs-fixer-extensions": "^1.16"
     }
 }
