--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,9 @@
         "classmap": ["tests/"]
     },
     "require": {
-        "php": "^7.1"
+        "php": "^5.3.3"
     },
     "require-dev": {
-        "doctrine/common": "^2.9",
-        "phpunit/phpunit": "^7.2",
-        "roave/security-advisories": "dev-master",
-        "slam/php-cs-fixer-extensions": "^1.16"
+        "phpunit/phpunit": "^4.8"
     }
 }
