--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,9 @@ sudo: false
 matrix:
   fast_finish: true
   include:
-    - php: 7.1
-      env: CS_CHECK=1
-    - php: 7.2
-      env: CODE_COVERAGE=1
+    - php: 7.3
+      env: CS_CHECK=1 CODE_COVERAGE=1
+    - php: 7.4snapshot
 
 cache:
   directories:
