--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,21 @@
             "role": "Developer"
         }
     ],
-    "autoload": {
-        "files": ["lib/r.php"]
-    },
-    "autoload-dev": {
-        "classmap": ["tests/"]
-    },
     "require": {
-        "php": "^7.3"
+        "php": "^7.4 || ^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5",
-        "roave/security-advisories": "dev-master",
-        "slam/php-cs-fixer-extensions": "^1.19"
+        "phpunit/phpunit": "^9.4.2",
+        "slam/php-cs-fixer-extensions": "^2.0.0"
+    },
+    "autoload": {
+        "files": [
+            "lib/r.php"
+        ]
+    },
+    "autoload-dev": {
+        "classmap": [
+            "tests/"
+        ]
     }
 }
