--- a/.gitattributes
+++ b/.gitattributes
@@ -4,4 +4,5 @@
 .gitignore export-ignore
 .php_cs export-ignore
 Makefile export-ignore
+composer-require-checker.json export-ignore
 phpunit.xml export-ignore
