--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,9 @@
         "php": "^7.4 || ^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.4.2",
-        "slam/php-cs-fixer-extensions": "^2.0.0"
+        "malukenho/mcbumpface": "^1.1.5",
+        "phpunit/phpunit": "^9.5.4",
+        "slam/php-cs-fixer-extensions": "^v3.0.1"
     },
     "autoload": {
         "files": [
