Drop PHP 8.0, update to PHPUnit 10

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-vendor/
-.idea/
-.php-cs-fixer.cache
-.phpunit.result.cache
-composer.lock
+/.idea/
+/.phpunit.cache/
+/vendor/
+/coverage/
+/.php-cs-fixer.cache
+/.phpunit.result.cache
+/composer.lock
