--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "slam/php-debug-r",
-    "type": "library",
     "description": "Debug function",
     "license": "MIT",
+    "type": "library",
     "authors": [
         {
             "name": "Filippo Tessarotto",
@@ -11,12 +11,11 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0"
+        "php": "~8.1.0 || ~8.2.0"
     },
     "require-dev": {
-        "malukenho/mcbumpface": "^1.1.5",
-        "phpunit/phpunit": "^9.5.4",
-        "slam/php-cs-fixer-extensions": "^v3.0.1"
+        "phpunit/phpunit": "^10.0.11",
+        "slam/php-cs-fixer-extensions": "^3.4"
     },
     "autoload": {
         "files": [
