--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,10 @@
-/.github export-ignore
-/tests export-ignore
-.gitattributes export-ignore
-.gitignore export-ignore
-.php-cs-fixer.php export-ignore
-Makefile export-ignore
-composer-require-checker.json export-ignore
-phpunit.xml export-ignore
+/.github/                       export-ignore
+/tests/                         export-ignore
+/.gitattributes                 export-ignore
+/.gitignore                     export-ignore
+/.php-cs-fixer.php              export-ignore
+/Makefile                       export-ignore
+/Dockerfile                     export-ignore
+/docker-compose.yml             export-ignore
+/composer-require-checker.json  export-ignore
+/phpunit.xml                    export-ignore
